# paper-miner

./: README.md  pyproject.toml
paper_miner/: __init__.py  cli.py  exporter.py  extractor.py  ingest.py  llm_parser.py  models.py
tests/: __init__.py  test_exporter.py  test_extractor.py  test_ingest.py  test_llm_parser.py
tests/fixtures/: sample.html
